# goodman_photometry

./: .flake8  .gitignore  .pydocstyle  .readthedocs.yaml  README.md  environment.yml  goodman_astro.py  pyproject.toml  redphot.py  requirements.txt  stdpipe_astrometry_goodman.py  stdpipe_photometry_goodman.py  stdpipe_photometry_goodman_stdpipe.py  tox.ini
.github/workflows/: python-package.yml
docs/source/: conf.py  goodman_photometry.rst  goodman_photometry.tests.rst  index.rst  modules.rst
goodman_photometry/: __init__.py  astrometry.py  goodman_astro.py  photometry.py  redastro.py  redphot.py  utils.py
goodman_photometry/tests/: test_goodman_astro.py
